# nipinpaul

./: .gitignore  pyproject.toml
backend/: .env  .env.example  db.sqlite3  manage.py
backend/backend/: asgi.py  urls.py  wsgi.py
backend/backend/django_settings/: base.py  production.py
backend/backend/settings/: aws_settings.py
backend/resume/: admin.py  models.py  serializers.py  urls.py  views.py
backend/resume/migrations/: 0001_initial.py  0002_language_delete_expertise_and_more.py  0003_education_certificate_image.py  0004_rename_language_language_name_and_more.py  0005_rename_skill_type_skill_category_and_more.py
frontend/nipin-resume-site/: .gitignore  index.html  package-lock.json  package.json
frontend/nipin-resume-site/src/: App.jsx  index.css
frontend/nipin-resume-site/src/components/: CertificationSection.jsx  CertificationSection.module.css  ContactForm.jsx  ContactForm.module.css  EducationSection.jsx  EducationSection.module.css  ExperienceSection.jsx  ExperienceSection.module.css  Footer.jsx  HeaderBanner.jsx  HeaderBanner.module.css  Layout.jsx  Layout.module.css  NavigationButtons.jsx  NavigationButtons.module.css  ProfileSection.jsx  ProfileSection.module.css  ResumeModal.jsx  ResumeModal.module.css  Sidebar.jsx  SidebarCard.jsx  SidebarCard.module.css  Skills.jsx
frontend/nipin-resume-site/src/pages/: Home.jsx
frontend/nipin-resume-site/src/services/: api.js
frontend/nipin-resume-site/src/styles/: typography.module.css
